# ConvoNerd

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConvoNerd Colab.ipynb  Dockerfile  Json_text_extractor.py  LICENSE  README.md  app.py  contributing.md  conversation_chain.py  convonerd_colab.ipynb  deal_with_urls.py  language_models.py  pyproject.toml  requirements.txt  youtube_transcript.py
.github/:  pull_request_template.md
conf/: conversation_chain.yaml  embedding.yaml  language_models.yaml  paths.yaml  text_processing.yaml
conversation/: conversation_chain.py
embedding/: text_processing.py  vector_store.py
language_models/: language_models.py
models/: Model Download Instructions.md
text_extraction/: Json_extractor.py  pdf_extractor.py  text_file_extractor.py  url_extractor.py  youtube_extractor.py
utils/: helpers.py
