[tool.poetry]
name = "pdf-chat"
version = "0.1.0"
description = ""
authors = ["Marawan Mamdouh <marawanxmamdouh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 <3.13"
torch = "^2.1.0"
langchain = "^0.0.314"
youtube-transcript-api = "^0.6.1"
streamlit = "^1.27.2"
transformers = "^4.34.0"
auto-gptq = "^0.4.2"
wheel = "^0.41.2"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
ctransformers = "^0.2.27"
pypdf = "^3.16.4"
unstructured = "^0.10.22"
python-magic-bin = "^0.4.14"
python-magic = "^0.4.27"
libmagic = "^1.0"
pillow = "^10.1.0"
python-box = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
